# luma

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  INSTALL.md  README.md  REBRAND.md  biome.json  docker-compose.yml  package.json  rust-toolchain.toml  sonar-project.properties  vitest.config.ts
clients/desktop/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
clients/desktop/src-tauri/.cargo/: config.toml
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: libmpv_linux.rs  libmpv_mac.rs  libmpv_win.rs  main.rs  mpv.rs  mpv_dispatch.rs  webview_gpu.rs  window_shim.m
server/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.runtime  README.md  build.rs
server/crates/kroma-config/: Cargo.toml
server/crates/kroma-config/src/: lib.rs
server/crates/kroma-db/: Cargo.toml
server/crates/kroma-db/src/: accounts.rs  admin.rs  audio_analysis.rs  backup.rs  catalog_query.rs  curated.rs  downloads.rs  home.rs  ingest.rs  jobs.rs  lib.rs  library.rs  localize.rs  markers.rs  media.rs  metadata_core.rs  passkeys.rs  pipeline.rs  playback.rs  reports.rs  requests.rs  schema.rs  suggest.rs  taste.rs  tmdb_pin.rs  vectors.rs  (+1 more)
server/crates/kroma-domain/: Cargo.toml
server/crates/kroma-engine/: Cargo.toml
server/crates/kroma-http/: Cargo.toml
server/crates/kroma-i18n/: Cargo.toml
server/crates/kroma-module-host/: Cargo.toml
server/crates/kroma-module-kernel/: Cargo.toml
server/crates/kroma-module-macros/: Cargo.toml
server/crates/kroma-module-manifest/: Cargo.toml
server/crates/kroma-module-runtime/: Cargo.toml
server/crates/kroma-module-sdk/: Cargo.toml
server/crates/kroma-module-supervisor/: Cargo.toml
server/crates/kroma-modules-generated/: Cargo.toml
server/crates/kroma-port-bridge/: Cargo.toml
server/crates/kroma-primitives/: Cargo.toml
server/crates/luma-contracts/: Cargo.toml
server/crates/luma-downloads/: Cargo.toml
server/crates/luma-engine/: Cargo.toml
server/crates/luma-fetch/: Cargo.toml
server/crates/luma-indexer/: Cargo.toml
server/crates/luma-module-host/: Cargo.toml
server/crates/luma-module-kernel/: Cargo.toml
server/crates/luma-module-macros/: Cargo.toml
server/crates/luma-module-manifest/: Cargo.toml
server/crates/luma-module-runtime/: Cargo.toml
server/crates/luma-module-sdk/: Cargo.toml
server/crates/luma-module-supervisor/: Cargo.toml
server/crates/luma-module-wasm/: Cargo.toml
server/crates/luma-modules-generated/: Cargo.toml
server/crates/luma-port-bridge/: Cargo.toml
server/crates/luma-release/: Cargo.toml
server/crates/luma-torrents/: Cargo.toml
server/crates/luma-torznab/: Cargo.toml
server/modules/acquisition/: module.json
server/modules/dev.luma.acquisition/: module.json
server/modules/dev.luma.engine.qbittorrent/: README.md  module.json
server/modules/dev.luma.engine.transmission/: README.md  module.json
server/modules/dev.luma.hello/: README.md  module.json
server/modules/dev.luma.indexer/: module.json
server/modules/dev.luma.mdns/: README.md  module.json
server/modules/dev.luma.remote/: README.md  module.json
server/modules/dev.luma.scene/: README.md  module.json
server/modules/dev.luma.torrents/: README.md  module.json
server/modules/dev.luma.torznab/: README.md  module.json
server/modules/dev.luma.vector/: README.md  module.json
server/modules/dev.luma.vpn/: README.md  module.json
server/modules/dev.luma.whisper/: module.json
server/modules/engine.qbittorrent/: README.md  module.json
server/modules/engine.transmission/: README.md  module.json
server/modules/indexer/: module.json
server/modules/remote/: README.md
server/modules/torrents/: module.json
server/modules/tv.kroma.acquisition/: README.md  module.json
server/modules/tv.kroma.engine.qbittorrent/: README.md  module.json
server/modules/tv.kroma.engine.transmission/: README.md  module.json
server/modules/tv.kroma.indexer/: README.md  module.json
server/modules/tv.kroma.mdns/: module.json
server/modules/tv.kroma.remote/: README.md  module.json
server/modules/tv.kroma.scene/: module.json
server/modules/tv.kroma.torrents/: module.json
server/modules/tv.kroma.torznab/: module.json
server/modules/tv.kroma.vector/: module.json
server/modules/tv.kroma.vpn/: README.md  module.json
server/modules/tv.kroma.whisper/: README.md  module.json
server/modules/vpn/: README.md
server/src/: activity.rs  config.rs  db.rs  demo.rs  events.rs  i18n.rs  main.rs  metadata.rs  metrics.rs  model.rs  playback.rs  probe.rs  scan.rs  settings.rs  state.rs  tls.rs  transcode.rs  watch.rs
server/src/api/: accounts.rs  admin.rs  card.rs  discover.rs  downloads_overlay.rs  dto.rs  error.rs  extract.rs  handlers.rs  home.rs  host_jobs.rs  images.rs  invites.rs  it_accounts.rs  it_admin.rs  it_admin2.rs  it_admin_manage.rs  it_auth.rs  it_content.rs  it_invites.rs  it_media.rs  it_pin.rs  it_playback.rs  it_rematch.rs  it_reports.rs  media.rs  metadata.rs  mod.rs  modules.rs  online_subs.rs  passkeys.rs  people.rs  pin.rs  playback.rs  plugin.rs  poster.rs  recommend.rs  rematch.rs  reports.rs  requests.rs  (+8 more)
server/src/db/: accounts.rs  admin.rs  backup.rs  catalog_query.rs  curated.rs  downloaded_subs.rs  downloads.rs  home.rs  indexers.rs  ingest.rs  jobs.rs  library.rs  markers.rs  media.rs  mod.rs  pipeline.rs  playback.rs  requests.rs  schema.rs  suggest.rs  vectors.rs
server/src/domain/: accounts.rs  acquisition.rs  admin.rs  jobs.rs  library.rs  media.rs  metadata.rs  mod.rs  organize.rs  pipeline.rs  playback.rs  requests.rs  section.rs
server/src/infra/: discovery.rs  events.rs  ffmpeg_gate.rs  image.rs  metrics.rs  mod.rs  stream.rs  subtitles.rs  theme.rs  watch.rs
server/src/modules/: downloads.rs  engines.rs  indexers.rs  mod.rs  remote.rs  vpn.rs
server/src/services/: activity.rs  auth.rs  demo.rs  enrich.rs  mod.rs  quickconnect.rs  requests.rs
wasm-modules/dev.luma.hellowasm/server/: Cargo.toml
(+1136 files in other folders)
