[package]
name = "luma-server"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
description = "LUMA a self-hosted, direct-play media streaming server"
license.workspace = true

[[bin]]
name = "luma-server"
path = "src/main.rs"

# The server is the root package of a Cargo workspace (the Rust mirror of the
# bun workspaces on the TS side). Self-contained domains live as crates under
# crates/ so they build + test in isolation (`cargo test -p luma-scene`),
# while everything still links into this one binary. All existing entry points
# (`cargo build` from server/, CI, the Synology docker build) are unchanged.
[workspace]
# Shared infra crates live under crates/. Self-contained domain *modules* live
# under modules/<id>/server (paired with their frontend at modules/<id>/ui, their
# translations at modules/<id>/locales, and a shared modules/<id>/module.json).
# Modules sit under server/ because cargo refuses members outside the workspace root.
members = ["crates/*", "modules/*/server"]

# Shared package metadata. Every member (and the root package above) inherits
# these via `edition.workspace = true` etc. Versions stay per-crate: the libs
# under crates/ are versioned independently of the server binary.
[workspace.package]
edition = "2021"
# Raised from 1.86 to accommodate webauthn-rs (passkeys), whose dep graph
# (uuid >= 1.19) needs a newer Rust. Local + Docker builds run 1.96.
rust-version = "1.88"
license = "MIT"

# Single source of truth for versions shared across workspace members. The root
# package keeps its own [dependencies] table as-is; members opt in via
# `{ workspace = true }`.
[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
quick-xml = "0.37"
# Cardigann indexer engine (luma-indexer): YAML definitions, HTML scraping with
# CSS selectors, regex-driven field filters, and flexible date parsing. XPath
# support (libxml, C) is feature-gated on the crate so the default musl build
# stays pure-Rust.
serde_yaml = "0.9"
scraper = "0.20"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
libxml = "0.3"
# Insertion-order-preserving map: Cardigann `fields` reference earlier fields
# (`.Result.x`), so field order is load-bearing.
indexmap = { version = "2", features = ["serde"] }
# Candle ML stack + tokenizer, shared by luma-whisper (whisper) and luma-vector
# (semantic). CPU-only pure-Rust by default (default-features off) so the musl
# single binary keeps linking; the macos target block in each crate adds `metal`.
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }
# `onig` (Oniguruma, C) is enabled: tokenizers 0.20's regex pre-tokenizer
# references it unconditionally. C-on-musl is fine. default-features off drops the
# heavier progressbar/http extras.
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
# mDNS / DNS-SD advertising (luma-mdns). Pure Rust.
mdns-sd = "0.11"
# Shared by luma-primitives (and the binary). `time` stays pinned: >= 0.3.37 needs the
# edition2024 cargo feature.
time = { version = "=0.3.36", features = ["formatting", "macros"] }
sha2 = "0.10"
hex = "0.4"
# Embedded SQLite compiled from source. Shared by luma-db + the binary.
rusqlite = { version = "0.31", features = ["bundled"] }
# HTTP / async runtime, shared by luma-engine (i18n extractor, stream, services)
# and the binary (router + handlers).
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-gzip", "compression-br"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
walkdir = "2"
jwalk = "0.8"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
notify = "6"
sysinfo = "0.30"
# In-process JPEG "card" compositing (tiny-skia raster + fontdue glyphs), shared
# by luma-engine (storyboard/image) and the binary (api/card.rs).
tiny-skia = "0.11"
fontdue = "0.9"
jpeg-encoder = "0.6"
# In-RAM full-text search (services/search). default-features off drops mmap.
tantivy = { version = "0.22", default-features = false, features = ["lz4-compression"] }
rusty-chromaprint = "0.3.0"
# jobserver held at its last 2021-edition release for the tantivy graph. uuid is
# no longer pinned down: webauthn-rs (passkeys) needs uuid >= 1.19.
uuid = "1.19"
jobserver = "=0.1.32"
# WebAuthn / passkeys relying-party. Requires uuid >= 1.19 (see the pin above)
# and rust >= 1.88. Pulls openssl transitively (see the binary dep + Dockerfile).
webauthn-rs = "0.5.5"
# musl allocator (Linux only; see the binary's #[global_allocator]).
mimalloc = { version = "0.1", default-features = false }
# In-workspace crates, referenced by path so a member bumping its own version
# doesn't force a churn here.
luma-module-sdk = { path = "crates/luma-module-sdk" }
# Runtime hot-load tier: loads WASM modules (extism) into the running server.
luma-module-wasm = { path = "crates/luma-module-wasm" }
# Generated aggregator: registers every single-file (codegen) module. Owned by
# scripts/gen-modules.ts; run `bun run modules:gen` after adding a *.module.md.
luma-modules-generated = { path = "crates/luma-modules-generated" }
luma-config = { path = "crates/luma-config" }
luma-primitives = { path = "crates/luma-primitives" }
luma-domain = { path = "crates/luma-domain" }
luma-i18n = { path = "crates/luma-i18n" }
luma-db = { path = "crates/luma-db" }
luma-http = { path = "crates/luma-http" }
luma-module-host = { path = "crates/luma-module-host" }
luma-scene = { path = "modules/dev.luma.scene/server" }
luma-torznab = { path = "modules/dev.luma.torznab/server" }
luma-indexer = { path = "modules/indexer/server" }
luma-remote = { path = "modules/remote/server" }
luma-vpn = { path = "modules/vpn/server" }
luma-downloads = { path = "crates/luma-downloads" }
luma-torrent = { path = "modules/torrents/server" }
luma-whisper = { path = "modules/dev.luma.whisper/server" }
luma-vector = { path = "modules/dev.luma.vector/server" }
luma-mdns = { path = "modules/dev.luma.mdns/server" }
luma-engine = { path = "crates/luma-engine" }

[features]
# Feature knobs are unchanged for callers (`cargo build`, CI, the Synology .spk),
# but the code they toggle now lives in luma-engine and its leaf crates, so each
# just forwards to `luma-engine/<feature>`. Cargo unifies features globally, so
# flipping these enables the right candle/librqbit graph wherever it's used.
default = ["whisper-local", "torrent-rqbit"]

# Embedded BitTorrent engine (librqbit). ON by default. Off drops the librqbit
# graph; the "rqbit" client kind reports "not compiled" and Transmission /
# qBittorrent (plain curl) remain.
torrent-rqbit = ["luma-engine/torrent-rqbit"]

# Multilingual semantic embeddings (MiniLM via candle). OFF by default (the
# dependency-free lexical embedder is the default). See luma-vector.
semantic-embeddings = ["luma-engine/semantic-embeddings"]

# In-process Whisper transcription (candle, no external whisper.cpp). ON by
# default. Off compiles a stub and the "transcribe" capability reports false.
whisper-local = ["luma-engine/whisper-local"]

# GPU-accelerated Whisper for local dev builds (never the musl single binary).
# metal = Apple-Silicon, cuda = NVIDIA, accelerate = Apple vecLib BLAS. The engine
# picks the device at runtime and falls back to CPU. See luma-whisper.
whisper-metal = ["luma-engine/whisper-metal"]
whisper-cuda = ["luma-engine/whisper-cuda"]
whisper-accelerate = ["luma-engine/whisper-accelerate"]

[dependencies]
# The binary is now a thin HTTP shell: the router + handlers (src/api) over the
# business logic in luma-engine. It pulls only what api/main touch directly.
luma-engine = { workspace = true }
# The host seam: shared HTTP extractors (AuthUser) + the HostCtx contract. The
# binary re-exports the extractors from their historical `crate::api::extract`
# path; module crates depend on this leaf instead of the whole engine.
luma-module-host = { workspace = true }
# Relocated module backend crates the binary wires (their MODULE manifest +
# their routes, injected by the module's ServerModule glue).
luma-remote = { workspace = true }
luma-vpn = { workspace = true }
luma-downloads = { workspace = true }
# Aliased in main.rs so api's `crate::config` / `crate::db` keep resolving; the
# `crate::model` wire types come through `luma-engine`.
luma-config = { workspace = true }
luma-db = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
# api handlers touch rusqlite params directly on the shared Pool.
rusqlite = { workspace = true }
# Used directly by api handlers: time (timestamp formatting), hex, zip (backup
# download), walkdir + sysinfo (storage/stats endpoints), and the acquisition
# view types from luma-torrent / luma-scene.
time = { workspace = true }
hex = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }
sysinfo = { workspace = true }
luma-torrent = { workspace = true }
luma-scene = { workspace = true }
# The single module registry lives here (server/src/modules): it registers every
# compile-time module's `MODULE` const, so the server depends on each directly.
luma-indexer = { workspace = true }
luma-torznab = { workspace = true }
luma-whisper = { workspace = true }
luma-vector = { workspace = true }
luma-mdns = { workspace = true }
luma-modules-generated = { workspace = true }
# The admin modules endpoint names ModuleManifest for its flattened response.
luma-module-sdk = { workspace = true }
# Runtime WASM module host (install/load .wasm modules at runtime via extism).
luma-module-wasm = { workspace = true }

# Smart Hub preview "cards" (api/card.rs): composite a backdrop + logo + title
# into a JPEG in-process. tiny-skia raster, fontdue glyphs, jpeg-encoder output.
tiny-skia = { workspace = true }
fontdue = { workspace = true }
jpeg-encoder = { workspace = true }

# jobserver held at its last 2021-edition release for the tantivy graph (pulled
# in by luma-engine). Declared here (unused directly) so the lockfile pins it.
jobserver = { workspace = true }
# WebAuthn / passkeys relying-party (api/passkeys). `conditional-ui` unlocks the
# discoverable (usernameless) authentication API.
webauthn-rs = { workspace = true, features = ["conditional-ui"] }
# webauthn-rs pulls openssl. Force the `vendored` feature so openssl-sys compiles
# it from source and links it statically instead of hunting for a system libssl.
# This is what makes the x86_64-musl Synology build (no musl libssl) link, and it
# keeps the glibc Docker/CI builds independent of libssl-dev too.
openssl = { version = "0.10", features = ["vendored"] }
# `v5` for the deterministic per-account WebAuthn user handle (api/passkeys
# derives it from the account id). Enabled on the bin dep so it's present in the
# real build, not only when dev-deps happen to pull it in.
uuid = { workspace = true, features = ["v5"] }

# musl's malloc serializes under our thread mix (tokio + rayon + candle + tantivy);
# mimalloc removes that contention. Linux-only; macOS dev keeps the system
# allocator. See the #[global_allocator] in main.rs.
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { workspace = true }

# Keep the dependency graph lean and 1.81-friendly.
[profile.release]
# Speed over size: the Synology target has a weak CPU and the hot paths are
# CPU-bound (candle gemm, tantivy BM25, sha2, tiny-skia, JPEG encode). The
# binary grows a few MiB versus "z", which the .spk budget absorbs fine.
opt-level = 3
lto = true
codegen-units = 1
strip = true
