[package]
name = "kroma-server"
version = "0.1.25"
edition.workspace = true
rust-version.workspace = true
description = "KROMA a self-hosted, direct-play media streaming server"
license.workspace = true

[[bin]]
name = "kroma-server"
path = "src/main.rs"

# The server is the root package of a Cargo workspace (the Rust mirror of the
# bun workspaces on the TS side). Self-contained domains live as crates under
# crates/ so they build + test in isolation (`cargo test -p kroma-scene`),
# while everything still links into this one binary. All existing entry points
# (`cargo build` from server/, CI, the Synology docker build) are unchanged.
[workspace]
# Shared infra crates live under crates/. Self-contained domain *modules* live
# under modules/<id>/server (paired with their frontend at modules/<id>/ui, their
# translations at modules/<id>/locales, and a shared modules/<id>/module.json).
# Modules sit under server/ because cargo refuses members outside the workspace root.
members = ["crates/*", "modules/*/server"]

# Shared package metadata. Every member (and the root package above) inherits
# these via `edition.workspace = true` etc. Versions stay per-crate: the libs
# under crates/ are versioned independently of the server binary.
[workspace.package]
edition = "2021"
# Raised from 1.86 to accommodate webauthn-rs (passkeys), whose dep graph
# (uuid >= 1.19) needs a newer Rust. Local + Docker builds run 1.96.
rust-version = "1.88"
license = "MIT"

# Single source of truth for versions shared across workspace members. The root
# package keeps its own [dependencies] table as-is; members opt in via
# `{ workspace = true }`.
[workspace.dependencies]
anyhow = "1"
# axum 0.8 dropped its `async_trait` re-export (traits can use native async fn),
# but our object-safe host/port traits (dyn HostCtx, dyn *Port) still need the
# macro for dyn-compatibility, so depend on the crate directly.
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
quick-xml = "0.41"
# Cardigann indexer engine (kroma-indexer): YAML definitions, HTML scraping with
# CSS selectors, regex-driven field filters, and flexible date parsing. XPath
# support (libxml, C) is feature-gated on the crate so the default musl build
# stays pure-Rust.
serde_yaml = "0.9"
scraper = "0.27"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
libxml = "0.3"
# Insertion-order-preserving map: Cardigann `fields` reference earlier fields
# (`.Result.x`), so field order is load-bearing.
indexmap = { version = "2", features = ["serde"] }
# Candle ML stack + tokenizer, shared by kroma-whisper (whisper) and kroma-vector
# (semantic). CPU-only pure-Rust by default (default-features off) so the musl
# single binary keeps linking; the macos target block in each crate adds `metal`.
candle-core = { version = "0.11", default-features = false }
candle-nn = { version = "0.11", default-features = false }
candle-transformers = { version = "0.11", default-features = false }
# `onig` (Oniguruma, C) is enabled: tokenizers 0.20's regex pre-tokenizer
# references it unconditionally. C-on-musl is fine. default-features off drops the
# heavier progressbar/http extras.
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
# mDNS / DNS-SD advertising (kroma-mdns). Pure Rust.
mdns-sd = "0.20"
# Shared by kroma-primitives (and the binary). Unpinned now that the toolchain is
# 1.96 (edition2024 is stable since 1.85, which >= 0.3.37 needs).
time = { version = "0.3", features = ["formatting", "macros"] }
sha2 = "0.10"
hex = "0.4"
# Embedded SQLite compiled from source. Shared by kroma-db + the binary.
rusqlite = { version = "0.40", features = ["bundled"] }
# HTTP / async runtime, shared by kroma-engine (i18n extractor, stream, services)
# and the binary (router + handlers).
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace", "fs", "compression-gzip", "compression-br"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
walkdir = "2"
jwalk = "0.8"
chacha20poly1305 = { version = "0.11", default-features = false, features = ["alloc"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
notify = "8"
sysinfo = "0.39"
# In-process JPEG "card" compositing (tiny-skia raster + fontdue glyphs), shared
# by kroma-engine (storyboard/image) and the binary (api/card.rs).
tiny-skia = "0.12"
fontdue = "0.9"
jpeg-encoder = "0.7"
# In-RAM full-text search (services/search). default-features off drops mmap.
tantivy = { version = "0.26", default-features = false, features = ["lz4-compression"] }
rusty-chromaprint = "0.3.0"
# uuid is no longer pinned down: webauthn-rs (passkeys) needs uuid >= 1.19.
uuid = "1.19"
jobserver = "0.1"
# WebAuthn / passkeys relying-party. Requires uuid >= 1.19 (see the pin above)
# and rust >= 1.88. Pulls openssl transitively (see the binary dep + Dockerfile).
webauthn-rs = "0.5.5"
# musl allocator (Linux only; see the binary's #[global_allocator]).
mimalloc = { version = "0.1", default-features = false }
# In-workspace crates, referenced by path so a member bumping its own version
# doesn't force a churn here.
# Low manifest layer (below engine): manifest/registry/embedded types that
# engine, kernel and wasm build on. Modules never depend on this directly.
kroma-module-manifest = { path = "crates/kroma-module-manifest" }
kroma-module-macros = { path = "crates/kroma-module-macros" }
# The out-of-process module runtime (each module binary's serve() entrypoint).
kroma-module-runtime = { path = "crates/kroma-module-runtime" }
# The core side: spawn/supervise module processes + reverse-proxy + callback API.
kroma-module-supervisor = { path = "crates/kroma-module-supervisor" }
kroma-port-bridge = { path = "crates/kroma-port-bridge" }
# The module SDK facade (ABOVE engine): the single crate every module depends on.
# Re-exports the manifest layer + the engine/host/domain/http surface modules use.
kroma-module-sdk = { path = "crates/kroma-module-sdk" }
# Generated aggregator: registers every single-file (codegen) module. Owned by
# scripts/gen-modules.ts; run `bun run modules:gen` after adding a *.module.md.
kroma-modules-generated = { path = "crates/kroma-modules-generated" }
kroma-config = { path = "crates/kroma-config" }
kroma-primitives = { path = "crates/kroma-primitives" }
kroma-domain = { path = "crates/kroma-domain" }
kroma-i18n = { path = "crates/kroma-i18n" }
kroma-db = { path = "crates/kroma-db" }
kroma-http = { path = "crates/kroma-http" }
kroma-module-host = { path = "crates/kroma-module-host" }
# The server-side module kernel: the compile-time composition root (registers
# every module's manifest + collects their ServerModule behaviors).
kroma-module-kernel = { path = "crates/kroma-module-kernel" }
kroma-scene = { path = "modules/tv.kroma.scene/server" }
kroma-torznab = { path = "modules/tv.kroma.torznab/server" }
kroma-indexer = { path = "modules/tv.kroma.indexer/server" }
kroma-remote = { path = "modules/tv.kroma.remote/server" }
kroma-vpn = { path = "modules/tv.kroma.vpn/server" }
kroma-transmission = { path = "modules/tv.kroma.engine.transmission/server" }
kroma-qbittorrent = { path = "modules/tv.kroma.engine.qbittorrent/server" }
kroma-torrent = { path = "modules/tv.kroma.torrents/server" }
kroma-acquisition = { path = "modules/tv.kroma.acquisition/server" }
kroma-whisper = { path = "modules/tv.kroma.whisper/server" }
kroma-vector = { path = "modules/tv.kroma.vector/server" }
kroma-mdns = { path = "modules/tv.kroma.mdns/server" }
kroma-engine = { path = "crates/kroma-engine" }

[features]
# Feature knobs are unchanged for callers (`cargo build`, CI, the Synology .spk),
# but the code they toggle now lives in kroma-engine and its leaf crates, so each
# just forwards to `kroma-engine/<feature>`. Cargo unifies features globally, so
# flipping these enables the right candle/librqbit graph wherever it's used.
default = ["whisper-local", "torrent-rqbit"]

# Embedded BitTorrent engine (librqbit). ON by default. Off drops the librqbit
# graph; the "rqbit" client kind reports "not compiled" and Transmission /
# qBittorrent (plain curl) remain.
torrent-rqbit = ["kroma-torrent/rqbit"]

# Multilingual semantic embeddings (MiniLM via candle). OFF by default (the
# dependency-free lexical embedder is the default). Forwarded straight to the
# vector module crate now that the engine names it only through a port.
semantic-embeddings = ["kroma-vector/semantic"]

# In-process Whisper transcription (candle, no external whisper.cpp). ON by
# default. Off compiles a stub and the "transcribe" capability reports false.
# Forwarded straight to the whisper module crate (the engine drives it via a port).
whisper-local = ["kroma-whisper/local"]

# GPU-accelerated Whisper for local dev builds (never the musl single binary).
# metal = Apple-Silicon, cuda = NVIDIA, accelerate = Apple vecLib BLAS. The engine
# picks the device at runtime and falls back to CPU. See kroma-whisper.
whisper-metal = ["kroma-whisper/metal"]
whisper-cuda = ["kroma-whisper/cuda"]
whisper-accelerate = ["kroma-whisper/accelerate"]

[dependencies]
# The binary is now a thin HTTP shell: the router + handlers (src/api) over the
# business logic in kroma-engine. It pulls only what api/main touch directly.
kroma-engine = { workspace = true }
# The host seam: shared HTTP extractors (AuthUser) + the HostCtx contract. The
# binary re-exports the extractors from their historical `crate::api::extract`
# path; module crates depend on this leaf instead of the whole engine.
kroma-module-host = { workspace = true }
# Aliased in main.rs so api's `crate::config` / `crate::db` keep resolving; the
# `crate::model` wire types come through `kroma-engine`.
kroma-config = { workspace = true }
kroma-db = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
# api handlers touch rusqlite params directly on the shared Pool.
rusqlite = { workspace = true }
# Used directly by api handlers: time (timestamp formatting), hex, zip (backup
# download), walkdir + sysinfo (storage/stats endpoints), and the acquisition
# view types from kroma-torrent.
time = { workspace = true }
hex = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }
sysinfo = { workspace = true }
kroma-torrent = { workspace = true }
# The acquisition vertical (search / grab / analyze routes + the search/import/
# match jobs). The binary repoints the request-tied search/grab handlers here and
# passes its JOBS to AppState. It deps kroma-torrent, never the reverse (no cycle).
kroma-acquisition = { workspace = true }
# The module kernel (composition root): registers every compile-time module's
# `MODULE` const, collects their ServerModules, and drives the enable/disable +
# admin-mount lifecycle. Formerly server/src/modules; now its own crate.
kroma-module-kernel = { workspace = true }
# Named only to register its stateless TorznabPort engine at the composition root.
kroma-port-bridge = { workspace = true }
# The core reaches the out-of-process embedder (tv.kroma.vector .kmod) over HTTP.
kroma-http = { workspace = true }
kroma-whisper = { workspace = true }
kroma-vector = { workspace = true }
# The admin modules endpoint names ModuleManifest for its flattened response.
kroma-module-sdk = { workspace = true }
# The store endpoints normalize registry catalogs and run the compat/version
# helpers (server_satisfies / range_matches / is_newer) against manifests.
kroma-module-manifest = { workspace = true }
# Out-of-process module supervisor: spawn/proxy installed .kmod module processes.
kroma-module-supervisor = { workspace = true }
rand = "0.10"

# Smart Hub preview "cards" (api/card.rs): composite a backdrop + logo + title
# into a JPEG in-process. tiny-skia raster, fontdue glyphs, jpeg-encoder output.
tiny-skia = { workspace = true }
fontdue = { workspace = true }
jpeg-encoder = { workspace = true }

# jobserver held at its last 2021-edition release for the tantivy graph (pulled
# in by kroma-engine). Declared here (unused directly) so the lockfile pins it.
jobserver = { workspace = true }
# WebAuthn / passkeys relying-party (api/passkeys). `conditional-ui` unlocks the
# discoverable (usernameless) authentication API.
webauthn-rs = { workspace = true, features = ["conditional-ui"] }
# webauthn-rs pulls openssl. Force the `vendored` feature so openssl-sys compiles
# it from source and links it statically instead of hunting for a system libssl.
# This is what makes the x86_64-musl Synology build (no musl libssl) link, and it
# keeps the glibc Docker/CI builds independent of libssl-dev too.
openssl = { version = "0.10", features = ["vendored"] }
# `v5` for the deterministic per-account WebAuthn user handle (api/passkeys
# derives it from the account id). Enabled on the bin dep so it's present in the
# real build, not only when dev-deps happen to pull it in.
uuid = { workspace = true, features = ["v5"] }

# Integration tests for the HTTP API layer (src/api/*): drive the real axum
# router in-process with `tower::ServiceExt::oneshot`. `tower` is a dev-only dep
# (the binary itself only needs `tower-http`).
[dev-dependencies]
tower = { workspace = true }

# musl's malloc serializes under our thread mix (tokio + rayon + candle + tantivy);
# mimalloc removes that contention. Linux-only; macOS dev keeps the system
# allocator. See the #[global_allocator] in main.rs.
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { workspace = true }

# Keep the dependency graph lean and 1.81-friendly.
[profile.release]
# Speed over size: the Synology target has a weak CPU and the hot paths are
# CPU-bound (candle gemm, tantivy BM25, sha2, tiny-skia, JPEG encode). The
# binary grows a few MiB versus "z", which the .spk budget absorbs fine.
opt-level = 3
lto = true
codegen-units = 1
strip = true

# The profile `bun run modules:pack` builds each `.kmod` sidecar with: release +
# `panic = "abort"`. Dropping the unwinding tables makes the binaries ~11% smaller
# at NO speed cost (opt-level stays 3). Safe for sidecars specifically: a panic
# aborts the module process and the supervisor respawns it (the core binary keeps
# the default unwinding `release` profile). Builds into target/release-kmod/.
[profile.release-kmod]
inherits = "release"
panic = "abort"
